Fixed bug #29808 (array_count_values() breaks with numeric strings).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@167272 c90b9560-bf6c-de11-be94-00142212c4b1